[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bcp47py"
version = "1.0.0"
description = ""
authors = ["guibos"]
readme = "README.rst"
packages = [{ include = "src" }]


[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
sphinx = "^7.2.6"
mypy = "^1.6.0"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.3.1"
pytest-yapf3 = "^0.7.0"
yapf = "^0.40.2"

[tool.poetry.scripts]
update-bcp47 = "src.bcp47py.bcp47_downloader_service:BCP47DownloaderService().download()"

[tool.pytest.ini_options]
pythonpath = "src"

[tool.yapf]
COLUMN_LIMIT = 120


