[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bcp47py"
version = "1.0.0"
description = "Provides standardized tags that is used to identify human languages and regions."
authors = ["Guillermo Ferrer Bosque"]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.9 <4.0"
pydantic = ">=2.0 <3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
sphinx = "^7.2.6"
mypy = "^1.6.0"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.3.1"
pytest-yapf3 = "^0.7.0"
yapf = "^0.40.2"
tox = "^4.11.3"

[tool.pytest.ini_options]
pythonpath = ["src/bcp47py"]
addopts = "--strict-markers --yapf --yapfdiff" #--cov --cov-append -n auto
markers = [
    "download: download data from external resources.",
    "non_mocked: parse full data without mocking."
]

[tool.yapf]
COLUMN_LIMIT = 120

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39, py310, py311, py312
isolated_build = true

[testenv]
allowlist_externals = poetry
commands_pre =
    poetry install --no-root --sync
commands =
    poetry run pytest tests/ --import-mode importlib

"""